--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ addons:
     notification_email: olivier.cinquin@uci.edu
     build_command_prepend: "true"
     build_command:   "cd A0PipeLine_Manager && ant"
+    branch_pattern: "*"
