--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ addons:
     notification_email: olivier.cinquin@uci.edu
     build_command_prepend: "true"
     build_command:   "./build"
-    branch_pattern: "*"
+#   branch_pattern: "*"
+    branch_pattern: "coverity"
